fixing menu button position on mobile

--- a/wp-content/themes/hopscotch-2017/css/src/components/_header.scss
+++ b/wp-content/themes/hopscotch-2017/css/src/components/_header.scss
@@ -9,6 +9,7 @@ header {
   display: grid;
   align-items: center;
   grid-template: 1fr / 5fr 1fr;
+  position: relative;
 }
 
 .logo {
